Use cjson and libuv source code build intead of downloading zip file
N/A

Also add testing/ltp .gitignore file.

Signed-off-by: liuhaitao <liuhaitao@xiaomi.com>
Change-Id: I74049a46e0ff7ab22226a3c59ee4d3a5a8623369

--- a/netutils/cjson/Makefile
+++ b/netutils/cjson/Makefile
@@ -48,7 +48,7 @@ CJSON_VERSION = $(patsubst "%",%,$(strip $(CONFIG_NETUTILS_CJSON_VERSION)))
 CJSON_TARBALL = v$(CJSON_VERSION).tar.gz
 WGET ?= wget
 
-CJSON_UNPACKNAME = cJSON-$(CJSON_VERSION)
+CJSON_UNPACKNAME = cJSON#-$(CJSON_VERSION)
 UNPACK ?= tar -zxf
 
 CJSON_UNPACKDIR =  $(WD)/$(CJSON_UNPACKNAME)
@@ -71,9 +71,9 @@ $(CJSON_UNPACKNAME): $(CJSON_TARBALL)
 	$(Q) $(UNPACK) $(CJSON_TARBALL)
 	$(Q) touch $(CJSON_UNPACKNAME)
 
-$(CJSON_SRCDIR)$(DELIM)cJSON.h: $(CJSON_UNPACKNAME)
+#$(CJSON_SRCDIR)$(DELIM)cJSON.h: $(CJSON_UNPACKNAME)
 
-$(CJSON_SRCDIR)$(DELIM)cJSON_Utils.h: $(CJSON_UNPACKNAME)
+#$(CJSON_SRCDIR)$(DELIM)cJSON_Utils.h: $(CJSON_UNPACKNAME)
 
 $(APPS_INCDIR)$(DELIM)cJSON.h: $(CJSON_SRCDIR)$(DELIM)cJSON.h
 	$(Q) cp $< $@
@@ -84,8 +84,8 @@ $(APPS_INCDIR)$(DELIM)cJSON_Utils.h: $(CJSON_SRCDIR)$(DELIM)cJSON_Utils.h
 context:: $(APPS_INCDIR)$(DELIM)cJSON.h $(APPS_INCDIR)$(DELIM)cJSON_Utils.h
 
 distclean::
-	$(call DELDIR, $(CJSON_UNPACKNAME))
-	$(call DELFILE, $(CJSON_TARBALL))
+#	$(call DELDIR, $(CJSON_UNPACKNAME))
+#	$(call DELFILE, $(CJSON_TARBALL))
 	$(call DELFILE, $(APPDIR)/include/netutils/cJSON.h)
 	$(call DELFILE, $(APPDIR)/include/netutils/cJSON_Utils.h)
 
