Update lvgl and lvgldemo Makfile since source code used
N/A

Signed-off-by: liuhaitao <liuhaitao@xiaomi.com>
Change-Id: Ief095d7fc63d6bb7375b21372b39e2a87023248c

--- a/examples/lvgldemo/Makefile
+++ b/examples/lvgldemo/Makefile
@@ -99,10 +99,10 @@ $(LVGL_EXAMPLES_UNPACKNAME): $(LVGL_EXAMPLES_TARBALL)
 	$(Q) mv	lv_examples-$(LVGL_EXAMPLES_VERSION) $(LVGL_EXAMPLES_UNPACKNAME)
 	$(Q) touch $(LVGL_EXAMPLES_UNPACKNAME)
 
-context:: $(LVGL_EXAMPLES_UNPACKNAME)
+context::# $(LVGL_EXAMPLES_UNPACKNAME)
 
 distclean::
-	$(call DELDIR, $(LVGL_EXAMPLES_UNPACKNAME))
-	$(call DELFILE, $(LVGL_EXAMPLES_TARBALL))
+#	$(call DELDIR, $(LVGL_EXAMPLES_UNPACKNAME))
+#	$(call DELFILE, $(LVGL_EXAMPLES_TARBALL))
 
 include $(APPDIR)/Application.mk
